Fixed email link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- Fallback email link -->
             <p class="contact-fallback">
                 If the form doesn't work, you can email me directly at 
-                <a href="mailto:your.email@example.com" class="email-link">your.email@example.com</a>
+                <a href="mailto:jacobpugh020@gmail.com" class="email-link">Here</a>
             </p>
         </section>
     </main>
